Unwrapping ignores seams in very simple case #32852

Closed
opened 2012-10-11 23:17:06 +02:00 by Tobias Oelgarte · 3 comments

%%%I appended an example file i unwrapped a cube after marking every edge as seam. Somehow the bottom left and center left face inside the UV-Editor are connected, even so they are separated by a seam.

Steps from the beginning:

  1. Open default scene
  2. Mark every edge of the cube as seam (Ctrl+E -> Mark Seam)
  3. Unwrap the cube (U -> Unwrap)
  4. Inspect the result. Two supposed to be isles are connected.

r51276, Ubuntu 12.04, 64 bit.%%%

%%%I appended an example file i unwrapped a cube after marking every edge as seam. Somehow the bottom left and center left face inside the UV-Editor are connected, even so they are separated by a seam. Steps from the beginning: 1. Open default scene 2. Mark every edge of the cube as seam (Ctrl+E -> Mark Seam) 3. Unwrap the cube (U -> Unwrap) 4. Inspect the result. Two supposed to be isles are connected. r51276, Ubuntu 12.04, 64 bit.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%The seams are not really ignored, there is just no gap between the islands, so they happen to be connected after packing the separate faces into the image. There is no explicit UV connectivity for editing, it's all based on UVs being in the same location. I've changed the default margin for packing from 0.0 to 0.001 now, which should keep them separated.%%%

%%%The seams are not really ignored, there is just no gap between the islands, so they happen to be connected after packing the separate faces into the image. There is no explicit UV connectivity for editing, it's all based on UVs being in the same location. I've changed the default margin for packing from 0.0 to 0.001 now, which should keep them separated.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32852
No description provided.