Fix for #32852: set uv unwrap default packing marging to 0.001.